--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,8 @@
 {
-    "name": "moha/check24",
-    "description": "This is a repository for a code challange",
+    "name": "moha/blog",
+    "description": "Blog for jobinterview codechallange",
     "type": "project",
-    "require-dev": {
-        "phpunit/phpunit": "10.0.x-dev"
-    },
+    "license": "MIT",
     "authors": [
         {
             "name": "moha asghari",
@@ -12,5 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "autoload": {
+        "psr-4": {
+            "app\\": "\\"        
+        }
+    }
 }
